[project]
name = "webpage-sorter"
version = "0.1.0"
description = "Token-frugal URL intake, classification, judgment queue, and Markdown projection tools for AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yongjin / YongYongBot" }]
dependencies = ["psycopg[binary]>=3.1"]

[project.optional-dependencies]
postgres = []
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
webpage-sorter = "webpage_sorter_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
